create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -723,50 +723,50 @@ section.lazy-placeholder:after {
 .cid-s7DG5zPsQ3 H2 {
   color: #b1a374;
 }
-.cid-rZnmsYnFIn {
+.cid-s7FeaBtXKL {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #ffffff;
 }
-.cid-rZnmsYnFIn .mbr-section-subtitle {
+.cid-s7FeaBtXKL .mbr-section-subtitle {
   color: #767676;
 }
-.cid-rZnmsYnFIn .media-row {
+.cid-s7FeaBtXKL .media-row {
   display: -webkit-flex;
   justify-content: center;
   -webkit-justify-content: center;
 }
-.cid-rZnmsYnFIn .team-item {
+.cid-s7FeaBtXKL .team-item {
   transition: all .2s;
   margin-bottom: 2rem;
 }
-.cid-rZnmsYnFIn .team-item .item-image img {
+.cid-s7FeaBtXKL .team-item .item-image img {
   width: 100%;
 }
-.cid-rZnmsYnFIn .team-item .item-name p {
+.cid-s7FeaBtXKL .team-item .item-name p {
   margin-bottom: 0;
 }
-.cid-rZnmsYnFIn .team-item .item-role p {
+.cid-s7FeaBtXKL .team-item .item-role p {
   margin-bottom: 0;
 }
-.cid-rZnmsYnFIn .team-item .item-social {
+.cid-s7FeaBtXKL .team-item .item-social {
   display: -webkit-flex;
   flex-wrap: wrap;
   justify-content: center;
   -webkit-flex-wrap: wrap;
   -webkit-justify-content: center;
 }
-.cid-rZnmsYnFIn .team-item .item-social .socicon {
+.cid-s7FeaBtXKL .team-item .item-social .socicon {
   color: #232323;
   font-size: 17px;
 }
-.cid-rZnmsYnFIn H2 {
+.cid-s7FeaBtXKL H2 {
   color: #b1a374;
 }
-.cid-rZnmsYnFIn .item-name {
+.cid-s7FeaBtXKL .item-name {
   color: #b1a374;
 }
-.cid-rZnmsYnFIn .item-role P {
+.cid-s7FeaBtXKL .item-role P {
   color: #b1a374;
 }
 .cid-s7D1t4kKVa {
