--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap);
+@import url(https://fonts.googleapis.com/css?family=DM+Serif+Text:400,400i&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Michroma:400&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap);
 
 
 
@@ -8,23 +10,23 @@ body {
   font-family: Rubik;
 }
 .display-1 {
-  font-family: 'Roboto', sans-serif;
-  font-size: 4rem;
+  font-family: 'DM Serif Text', serif;
+  font-size: 4.25rem;
   font-display: swap;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 6.4rem;
+  font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Roboto', sans-serif;
-  font-size: 3rem;
+  font-family: 'Michroma', sans-serif;
+  font-size: 2.3rem;
   font-display: swap;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.8rem;
+  font-size: 3.68rem;
 }
 .display-4 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 1rem;
   font-display: swap;
 }
@@ -32,20 +34,20 @@ body {
   font-size: 1.6rem;
 }
 .display-5 {
-  font-family: 'Roboto', sans-serif;
-  font-size: 2.8rem;
-  font-display: swap;
-}
-.display-5 > .mbr-iconfont {
-  font-size: 4.48rem;
-}
-.display-7 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 1.5rem;
   font-display: swap;
 }
-.display-7 > .mbr-iconfont {
+.display-5 > .mbr-iconfont {
   font-size: 2.4rem;
+}
+.display-7 {
+  font-family: 'Rubik', sans-serif;
+  font-size: 1rem;
+  font-display: swap;
+}
+.display-7 > .mbr-iconfont {
+  font-size: 1.6rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -54,14 +56,14 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 3.2rem;
-    font-size: calc( 2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 3.4rem;
+    font-size: calc( 2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.4rem;
-    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.84rem;
+    font-size: calc( 1.455rem + (2.3 - 1.455) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.455rem + (2.3 - 1.455) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.8rem;
@@ -69,9 +71,9 @@ body {
     line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 2.24rem;
-    font-size: calc( 1.63rem + (2.8 - 1.63) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.63rem + (2.8 - 1.63) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.2rem;
+    font-size: calc( 1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -528,13 +530,16 @@ a:hover {
   color: #dfd9c6;
 }
 /* Scroll to top button*/
+.scrollToTop_wraper {
+  display: none;
+}
 .form-control {
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.5rem;
+  font-family: 'Rubik', sans-serif;
+  font-size: 1rem;
   font-display: swap;
 }
 .form-control > .mbr-iconfont {
-  font-size: 2.4rem;
+  font-size: 1.6rem;
 }
 blockquote {
   border-color: #149dcc;
@@ -622,186 +627,479 @@ iframe.lazy-placeholder,
 section.lazy-placeholder:after {
   opacity: 0.3;
 }
-.cid-rZlEPh3z00 {
-  background-image: url("../../../assets/images/004-accueil-vr-pierre-2-1920x1778.jpg");
+.cid-s8iLqXZRt7 .modal-body .close {
+  background: #1b1b1b;
 }
-.cid-rZlFoaOLM6 {
-  padding-top: 60px;
-  padding-bottom: 15px;
-  background-color: #ffffff;
+.cid-s8iLqXZRt7 .modal-body .close span {
+  font-style: normal;
 }
-.cid-rZlFoaOLM6 .mbr-section-subtitle {
-  color: #232323;
+.cid-s8iLqXZRt7 .carousel-inner > .active,
+.cid-s8iLqXZRt7 .carousel-inner > .next,
+.cid-s8iLqXZRt7 .carousel-inner > .prev {
+  display: table;
 }
-.cid-rZlFoaOLM6 H2 {
-  color: #b1a374;
+.cid-s8iLqXZRt7 .carousel-control .icon-next,
+.cid-s8iLqXZRt7 .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
 }
-.cid-rZm4WfSSod {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
+.cid-s8iLqXZRt7 .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
 }
-.cid-rZm4WfSSod .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rZlZIhf7zU {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-rZlZIhf7zU .mbr-section-subtitle {
-  color: #232323;
-}
-.cid-rZlZIhf7zU H2 {
-  color: #b1a374;
-}
-.cid-s7FcxLUI40 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-s7FcxLUI40 .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rZnloiDohN {
-  padding-top: 0px;
-  padding-bottom: 45px;
-  background: linear-gradient(45deg, #e4d295, #b1a374);
-}
-.cid-rZnloiDohN .mbr-section-subtitle {
-  font-style: italic;
-  letter-spacing: 1rem;
-}
-.cid-s7FbuF4oUq {
-  background: #ffffff;
-}
-.cid-s7FbuF4oUq .video-block {
-  margin: auto;
-  width: 100% !important;
-}
-@media (max-width: 768px) {
-  .cid-s7FbuF4oUq .video-block {
-    width: 100% !important;
+@media (max-width: 767px) {
+  .cid-s8iLqXZRt7 .container .carousel-control {
+    margin-bottom: 0;
   }
 }
-.cid-rZrgQKr14C {
-  padding-top: 0px;
-  padding-bottom: 45px;
-  background: linear-gradient(45deg, #e4d295, #b1a374);
+.cid-s8iLqXZRt7 .boxed-slider {
+  position: relative;
+  padding: 93px 0;
 }
-.cid-rZrgQKr14C .mbr-section-subtitle {
-  font-style: italic;
-  letter-spacing: 1rem;
+.cid-s8iLqXZRt7 .boxed-slider > div {
+  position: relative;
 }
-.cid-s7D0FTMEz7 {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-s7D0FTMEz7 .mbr-section-subtitle {
-  color: #232323;
-}
-.cid-s7D0FTMEz7 H2 {
-  color: #b1a374;
-}
-.cid-rZlR6lrYfQ {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-rZlR6lrYfQ .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-s7DG5zPsQ3 {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-s7DG5zPsQ3 .mbr-section-subtitle {
-  color: #232323;
-}
-.cid-s7DG5zPsQ3 H2 {
-  color: #b1a374;
-}
-.cid-s7FeaBtXKL {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-s7FeaBtXKL .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-s7FeaBtXKL .media-row {
-  display: -webkit-flex;
-  justify-content: center;
-  -webkit-justify-content: center;
-}
-.cid-s7FeaBtXKL .team-item {
-  transition: all .2s;
-  margin-bottom: 2rem;
-}
-.cid-s7FeaBtXKL .team-item .item-image img {
+.cid-s8iLqXZRt7 .container img {
   width: 100%;
 }
-.cid-s7FeaBtXKL .team-item .item-name p {
-  margin-bottom: 0;
+.cid-s8iLqXZRt7 .container img + .row {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 2;
 }
-.cid-s7FeaBtXKL .team-item .item-role p {
-  margin-bottom: 0;
+.cid-s8iLqXZRt7 .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
 }
-.cid-s7FeaBtXKL .team-item .item-social {
+.cid-s8iLqXZRt7 .mbr-table-cell {
+  padding: 0;
+}
+.cid-s8iLqXZRt7 .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-s8iLqXZRt7 .carousel-caption {
+  top: 50%;
+  right: 0;
+  bottom: auto;
+  left: 0;
   display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  -webkit-justify-content: center;
+  align-items: center;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-align-items: center;
 }
-.cid-s7FeaBtXKL .team-item .item-social .socicon {
-  color: #232323;
-  font-size: 17px;
+.cid-s8iLqXZRt7 .mbr-overlay {
+  z-index: 1;
 }
-.cid-s7FeaBtXKL H2 {
-  color: #b1a374;
+.cid-s8iLqXZRt7 .container-slide.container {
+  min-width: 100%;
+  min-height: 100vh;
+  padding: 0;
 }
-.cid-s7FeaBtXKL .item-name {
-  color: #b1a374;
+.cid-s8iLqXZRt7 .carousel-item {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
 }
-.cid-s7FeaBtXKL .item-role P {
-  color: #b1a374;
-}
-.cid-s7D1t4kKVa {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/mbr-2-1920x1280.jpg");
-}
-.cid-s7D1t4kKVa .form-control,
-.cid-s7D1t4kKVa .form-control:focus {
-  background: #ffffff;
-  border: 1px solid #ffffff;
-}
-.cid-s7D1t4kKVa .form-container {
-  transition: all .2s;
-  border: 1px solid #ffffff;
-  padding: 1rem;
-}
-.cid-s7D1t4kKVa textarea.form-control {
-  min-height: 188px;
-}
-.cid-s7D1t4kKVa .input-group-btn {
-  justify-content: center;
-  -webkit-justify-content: center;
-}
-@media (min-width: 768px) {
-  .cid-s7D1t4kKVa .content-container {
-    padding-right: 5rem;
+@media (max-width: 576px) {
+  .cid-s8iLqXZRt7 .carousel-item .container {
+    width: 100%;
   }
 }
-.cid-rZnnUphw9x {
-  padding-top: 0px;
-  padding-bottom: 60px;
-  background: linear-gradient(45deg, #e4d295, #b1a374);
+.cid-s8iLqXZRt7 .carousel-item-next.carousel-item-left,
+.cid-s8iLqXZRt7 .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
-.cid-rZnnUphw9x .mbr-section-subtitle {
-  font-style: italic;
-  letter-spacing: 1rem;
+.cid-s8iLqXZRt7 .active.carousel-item-right,
+.cid-s8iLqXZRt7 .carousel-item-next {
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+.cid-s8iLqXZRt7 .active.carousel-item-left,
+.cid-s8iLqXZRt7 .carousel-item-prev {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.cid-s8iLqXZRt7 .mbr-slider .carousel-control {
+  top: 50%;
+  width: 70px;
+  height: 70px;
+  margin-top: -1.5rem;
+  font-size: 35px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all .3s;
+}
+.cid-s8iLqXZRt7 .mbr-slider .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-s8iLqXZRt7 .mbr-slider .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-s8iLqXZRt7 .mbr-slider .carousel-control .mbr-iconfont {
+  font-size: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-s8iLqXZRt7 .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-s8iLqXZRt7 .mbr-slider .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-s8iLqXZRt7 .mbr-slider .carousel-indicators li {
+  max-width: 20px;
+  width: 20px;
+  height: 20px;
+  max-height: 20px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: .5;
+  transition: all .3s;
+}
+.cid-s8iLqXZRt7 .mbr-slider .carousel-indicators li.active,
+.cid-s8iLqXZRt7 .mbr-slider .carousel-indicators li:hover {
+  opacity: .9;
+}
+.cid-s8iLqXZRt7 .mbr-slider .carousel-indicators li::after,
+.cid-s8iLqXZRt7 .mbr-slider .carousel-indicators li::before {
+  content: none;
+}
+.cid-s8iLqXZRt7 .mbr-slider .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 576px) {
+  .cid-s8iLqXZRt7 .mbr-slider .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-s8iLqXZRt7 .mbr-slider > .container img {
+  width: 100%;
+}
+.cid-s8iLqXZRt7 .mbr-slider > .container img + .row {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-s8iLqXZRt7 .mbr-slider > .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+@media (max-width: 576px) {
+  .cid-s8iLqXZRt7 .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-s8iLqXZRt7 .mbr-slider .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-s8iLqXZRt7 .mbr-slider .mbr-table-cell {
+  padding: 0;
+}
+.cid-s8iLqXZRt7 .carousel-item .container.container-slide {
+  position: initial;
+  width: auto;
+  min-height: 0;
+}
+.cid-s8iLqXZRt7 .full-screen .slider-fullscreen-image {
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.cid-s8iLqXZRt7 .full-screen .slider-fullscreen-image.active {
+  display: -o-flex;
+}
+.cid-s8iLqXZRt7 .full-screen .container {
+  width: auto;
+  padding-right: 0;
+  padding-left: 0;
+}
+.cid-s8iLqXZRt7 .full-screen .carousel-item .container.container-slide {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-s8iLqXZRt7 .full-screen .carousel-item .container.container-slide img {
+  display: none;
+}
+.cid-s8iLqXZRt7 .mbr-background-video-preview {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.cid-s8iLqXZRt7 .mbr-overlay ~ .container-slide {
+  z-index: auto;
+}
+.cid-s8uRTgTQUF .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-s8uRTgTQUF .modal-body .close span {
+  font-style: normal;
+}
+.cid-s8uRTgTQUF .carousel-inner > .active,
+.cid-s8uRTgTQUF .carousel-inner > .next,
+.cid-s8uRTgTQUF .carousel-inner > .prev {
+  display: table;
+}
+.cid-s8uRTgTQUF .carousel-control .icon-next,
+.cid-s8uRTgTQUF .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-s8uRTgTQUF .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-s8uRTgTQUF .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-s8uRTgTQUF .boxed-slider {
+  position: relative;
+  padding: 93px 0;
+}
+.cid-s8uRTgTQUF .boxed-slider > div {
+  position: relative;
+}
+.cid-s8uRTgTQUF .container img {
+  width: 100%;
+}
+.cid-s8uRTgTQUF .container img + .row {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.cid-s8uRTgTQUF .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-s8uRTgTQUF .mbr-table-cell {
+  padding: 0;
+}
+.cid-s8uRTgTQUF .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-s8uRTgTQUF .carousel-caption {
+  top: 50%;
+  right: 0;
+  bottom: auto;
+  left: 0;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-align-items: center;
+}
+.cid-s8uRTgTQUF .mbr-overlay {
+  z-index: 1;
+}
+.cid-s8uRTgTQUF .container-slide.container {
+  min-width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-s8uRTgTQUF .carousel-item {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+}
+@media (max-width: 576px) {
+  .cid-s8uRTgTQUF .carousel-item .container {
+    width: 100%;
+  }
+}
+.cid-s8uRTgTQUF .carousel-item-next.carousel-item-left,
+.cid-s8uRTgTQUF .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.cid-s8uRTgTQUF .active.carousel-item-right,
+.cid-s8uRTgTQUF .carousel-item-next {
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+.cid-s8uRTgTQUF .active.carousel-item-left,
+.cid-s8uRTgTQUF .carousel-item-prev {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.cid-s8uRTgTQUF .mbr-slider .carousel-control {
+  top: 50%;
+  width: 70px;
+  height: 70px;
+  margin-top: -1.5rem;
+  font-size: 35px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all .3s;
+}
+.cid-s8uRTgTQUF .mbr-slider .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-s8uRTgTQUF .mbr-slider .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-s8uRTgTQUF .mbr-slider .carousel-control .mbr-iconfont {
+  font-size: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-s8uRTgTQUF .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-s8uRTgTQUF .mbr-slider .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-s8uRTgTQUF .mbr-slider .carousel-indicators li {
+  max-width: 20px;
+  width: 20px;
+  height: 20px;
+  max-height: 20px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: .5;
+  transition: all .3s;
+}
+.cid-s8uRTgTQUF .mbr-slider .carousel-indicators li.active,
+.cid-s8uRTgTQUF .mbr-slider .carousel-indicators li:hover {
+  opacity: .9;
+}
+.cid-s8uRTgTQUF .mbr-slider .carousel-indicators li::after,
+.cid-s8uRTgTQUF .mbr-slider .carousel-indicators li::before {
+  content: none;
+}
+.cid-s8uRTgTQUF .mbr-slider .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 576px) {
+  .cid-s8uRTgTQUF .mbr-slider .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-s8uRTgTQUF .mbr-slider > .container img {
+  width: 100%;
+}
+.cid-s8uRTgTQUF .mbr-slider > .container img + .row {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-s8uRTgTQUF .mbr-slider > .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+@media (max-width: 576px) {
+  .cid-s8uRTgTQUF .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-s8uRTgTQUF .mbr-slider .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-s8uRTgTQUF .mbr-slider .mbr-table-cell {
+  padding: 0;
+}
+.cid-s8uRTgTQUF .carousel-item .container.container-slide {
+  position: initial;
+  width: auto;
+  min-height: 0;
+}
+.cid-s8uRTgTQUF .full-screen .slider-fullscreen-image {
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.cid-s8uRTgTQUF .full-screen .slider-fullscreen-image.active {
+  display: -o-flex;
+}
+.cid-s8uRTgTQUF .full-screen .container {
+  width: auto;
+  padding-right: 0;
+  padding-left: 0;
+}
+.cid-s8uRTgTQUF .full-screen .carousel-item .container.container-slide {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-s8uRTgTQUF .full-screen .carousel-item .container.container-slide img {
+  display: none;
+}
+.cid-s8uRTgTQUF .mbr-background-video-preview {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.cid-s8uRTgTQUF .mbr-overlay ~ .container-slide {
+  z-index: auto;
 }
